# vm-x-ai

./: .dockerignore  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  eslint.config.mjs  lint-staged.config.js  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  tsconfig.json
.github/workflows/: code-quality.yml  docs-publish.yml  helm-publish.yml  release.yml
apps/api/: .kysely-codegenrc.ts  .swcrc  Dockerfile  nest-cli.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/ui/: eslint.config.mjs  next.config.js  openapi-ts.api.config.ts  package.json  tsconfig.json
docker/: init.sql
docker/otel/: otel-collector-config.yaml
docs/: docusaurus.config.ts  package.json  sidebars.ts
docs/docs/: architecture.md  core-components.md  getting-started.md  intro.md
examples/aws-cdk-ecs/: README.md  cdk.json
examples/aws-cdk-eks/: README.md  cdk.json  package.json  tsconfig.lib.json
examples/docker-compose/: README.md  aws.docker-compose.yml  default.docker-compose.yml  otel.docker-compose.yml  redis-cluster.docker-compose.yml
examples/langchain/: README.md  project.json  pyproject.toml
examples/langchain/langchain_vmx_example/: __init__.py  __main__.py
helm/: Chart.yaml  README.md  SECRETS.md  index.yaml  values-minikube.yaml  values-production.yaml  values.yaml
helm/templates/: _helpers.tpl  external-secrets.yaml  istio-gateway.yaml  otel.yaml  secrets.yaml
scripts/: bootstrap_minikube.sh  publish-helm-repo.sh
(+525 files in other folders)
